Project's_Code/Amazon_RedShift_Cloud_Formation_Stack_YAML_Code.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Amazon Redshift Project Stack (Modified)

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.80.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: RedshiftProjectVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: RedshiftProjectIGW

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:!Ref VPC
      Tags:
        - Key: Name
          Value: RedshiftProjectPublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:!Ref VPC
      Tags:
        - Key: Name
          Value: RedshiftProjectPrivateRouteTable

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:!Ref VPC
      CidrBlock: 10.80.101.0/24
      AvailabilityZone: us-east-1a
      Tags:
        - Key: Name
          Value: RedshiftPrivateSubnet01

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:!Ref VPC
      CidrBlock: 10.80.102.0/24
      AvailabilityZone: us-east-1b
      Tags:
        - Key: Name
          Value: RedshiftPrivateSubnet02

  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: redshift-database-demo-255

  S3VpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: com.amazonaws.us-east-1.s3
      VpcId:!Ref VPC
      RouteTableIds:
        - !Ref PrivateRouteTable

  IAMRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: RedshiftDemoProject
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: redshift.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: RedshiftDemoProject
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - s3:*
                Resource: !Sub "arn:aws:s3:::redshift-database-demo-255/*"

  RedshiftEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: RedshiftEC2SecurityGroup
      GroupDescription: EC2 access for Redshift Project
      VpcId:!Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  RedshiftSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: RedshiftSecurityGroup
      GroupDescription: Access to Redshift
      VpcId:!Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5439
          ToPort: 5439
          SourceSecurityGroupId:!GetAtt RedshiftEC2SecurityGroup.GroupId

  RedshiftSubnetGroup:
    Type: AWS::Redshift::ClusterSubnetGroup
    Properties:
      Description: Private subnet access for Redshift
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
